Upgraded the Technical skill part

--- a/index.html
+++ b/index.html
@@ -79,48 +79,83 @@
                 j'ai fais un séjour de 6 mois a l'étranger pour ameliorer mon anglais, j'ai donc un bon niveau dans cette langue.
             </span>
             <br><br>
-            <h2>Informations basiques</h2>
             <div id = "CInformatique"></div>
-            <ul>
-                <li><b>Age</b> : 23 ans</li>
-                <li><b>Email</b> : mgouviaux@gmail.com</li>
-                <li><b>Telephone</b> : +3351919312</li>
-                <li><b>Addresse</b> : 30 rue Joseph Rey, 38000 Grenoble</li>
-                <li><b>Permis</b> : Permis B</li>
-            </ul>
+            <div id = "InfoDiv">
+                <div id="InfoBa">
+                <h2>Informations basiques</h2>           
+                    <ul>
+                        <li><b>Age</b> : 23 ans</li>
+                        <li><b>Email</b> : mgouviaux@gmail.com</li>
+                        <li><b>Telephone</b> : +3351919312</li>
+                        <li><b>Addresse</b> : 30 rue Joseph Rey, 38000 Grenoble</li>
+                        <li><b>Permis</b> : Permis B</li>
+                    </ul>
+                </div>
+                <div id="CentreIn">
+                    <h2>Centres d'Intérêts</h2>
+                    <ul>
+                        <li><b>Développer des bots Python</b></li>
+                        <li><b>Lecture</b></li>
+                        <li><b>Jeux Vidéos</b> (MOBA/Aventure/Ect)</li>
+                        <li><b>Tir A l'Arc</b></li>
+                        <li><b>Voyages</b>(Irland : Sejour de 1 an de 2019 à 2020)</li>
+                    </ul>
+                </div>
+                <div id="Atouts">
+                    <h2>Atouts</h2>
+                    <ul>
+                        <li><b>Aisance à l'orale</b></li>
+                        <li><b>Energique</b></li>
+                        <li><b>Altruiste</b></li>
+                        <li><b>A l'écoute</b></li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <div class="cards" id = "CompInformatique">
             <h2>Competences Informatiques</h2>
-            <span>Python : ★★★★☆</span><br>
-            <ul>
-                <li>Utilisé dans un projet personnel</li>
-                <li>Librairies utilisées : Pyspark, MatplotLib, numpy, ect</li>
-                <li>Bases de Django</li>
-            </ul>
-            <span>C : ★★☆☆☆</span><br>
-            <span>C# : ★★★★☆</span><br>
-            <ul>
-                <li>Utilisé dans un projet personnel</li>
-            </ul>
-            <span>HTML/CSS : ★★★☆☆</span><br>
-            <ul>
-                <li>Utilisé pour créer ce CV</li>
-            </ul>
-            <span>JavaScript : ★★★☆☆</span><br>
-            <ul>
-                <li>Utilisé pour créer ce CV</li>
-            </ul>
-            <span>PHP : ★★★☆☆</span><br>
-            <ul>
-                <li>Bases de Symfony</li>
-            </ul>
-            <span>SQL : ★★★★☆</span><br>
-            <ul>
-                <li>Utilisation d'azure et de plusieurs Librairies basées sur la recuperation et la manipulation de données</li>
-            </ul>
-            <div id="EPro"></div>
-
+            <div id="ITSkills">
+                <div id="ITSkillsShard">
+                    <h3>Python : ★★★★☆</h3>
+                    <ul>
+                        <li>Utilisé dans un projet personnel</li>
+                        <li>Librairies utilisées : Pyspark, MatplotLib, numpy, ect</li>
+                        <li>Bases de Django</li>
+                    </ul>
+                </div>
+                <div id="ITSkillsShard">
+                    <h3>C# : ★★★★☆</h3>
+                    <ul>
+                        <li>Utilisé dans un projet personnel</li>
+                    </ul>
+                </div>
+                <div id="ITSkillsShard">
+                    <h3>SQL : ★★★★☆</h3>
+                    <ul>
+                        <li>Utilisation d'azure et de plusieurs Librairies basées sur la recuperation et la manipulation de données</li>
+                    </ul>
+                </div>
+                <div id="ITSkillsShard">
+                    <h3>HTML/CSS : ★★★☆☆</h3>
+                    <ul>
+                        <li>Utilisé pour créer ce CV</li>
+                    </ul>
+                </div>
+                <div id="ITSkillsShard">
+                    <h3>JavaScript : ★★★☆☆</h3>
+                    <ul>
+                        <li>Utilisé pour créer ce CV</li>
+                    </ul>
+                </div>
+                <div id="ITSkillsShard">
+                    <h3>PHP : ★★★☆☆</h3>
+                    <ul>
+                        <li>Bases de Symfony</li>
+                    </ul>
+                </div>
+                <div id="EPro"></div>
+            </div>
         </div>
 
         <div class = "cards" id="ExperiencesPro">
