Changed some errors with my informations

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <h3>A Propos</h3>
                 <span>
                     je suis Martin GOUVIAUX, étudiant en 2ème année de bachelor a <b><a href="https://www.epsi.fr/campus/campus-de-grenoble/" target="_blank">l'EPSI de Grenoble</a></b>
-                    et je suis à la recherche d'une alternance pour ma 3ème année dans le domaine du développement l'informatique. <br><br>
+                    et je suis à la recherche d'une alternance pour ma 3ème année dans le domaine du développement informatique. <br><br>
 
                     Mordu de jeux vidéos depuis ma plus tendre enfance, j'ai toujours voulu savoir ce qui se cachait derrière l'apparence colorée de ces moyens de divertissement
                     pour cette raison j'ai entrepris des études dans l'informatique. <br><br>
 
                     Comme écrit précédemment, j'adore les jeux vidéos, mais aussi lire, le tir à l'arc et les jeux de sociétés.<br>
-                    j'ai fais un séjour de 6 mois a l'étranger pour ameliorer mon anglais, j'ai donc un bon niveau dans cette langue.
+                    j'ai fait un séjour de 6 mois en Irelande pour ameliorer mon anglais, j'ai donc un bon niveau dans cette langue.
                 </span>
             </div>
             
@@ -177,13 +177,13 @@
                     </div>
                     <div class = "RightPartWork">
                         <div class = "Post">Employé Libre Service</div>
-                        <div class = "Description">Travail étudiant de 12h par semaines les week-ends</div>
+                        <div class = "Description">Travail étudiant de 12h par semaine les week-ends</div>
                     </div>
                 </div>
                 <div class = "Job">
                     <div class="LeftPartWork">
                         <div class = "Duration">Avril 2021 - Juin 2021</div>
-                        <div class = "WorkPlace">Raynet</div>
+                        <div class = "WorkPlace">ARaymond</div>
                         <div class="logo">
                             <img src="images/Logos/Schneider" alt="">
                         </div>
@@ -250,8 +250,8 @@
                         </div>
                     </div>
                     <div class = "RightPartEd">
-                        <div class = "EdTitle">Liscence Informatique et Maths Appliquées</div>
-                        <div class = "Description">Rater la 1ère année 2 fois</div>
+                        <div class = "EdTitle">Licence Informatique et Maths Appliquées</div>
+                        <div class = "Description">1ère année</div>
                     </div>
                 </div>
                 <div class = "Class">
