--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div class="APropos">
                 <h3>A Propos</h3>
                 <span>
-                    je suis Martin GOUVIAUX, étudiant en 2ème année de bachelor a <b><a href="https://www.epsi.fr/campus/campus-de-grenoble/" target="_blank">l'EPSI de Grenoble</a></b>
+                    Je suis Martin GOUVIAUX, étudiant en 2ème année de bachelor a <b><a href="https://www.epsi.fr/campus/campus-de-grenoble/" target="_blank">l'EPSI de Grenoble</a></b>
                     et je suis à la recherche d'une alternance pour ma 3ème année dans le domaine du développement informatique. <br><br>
 
                     Mordu de jeux vidéos depuis ma plus tendre enfance, j'ai toujours voulu savoir ce qui se cachait derrière l'apparence colorée de ces moyens de divertissement
                     pour cette raison j'ai entrepris des études dans l'informatique. <br><br>
 
-                    Comme écrit précédemment, j'adore les jeux vidéos, mais aussi lire, le tir à l'arc et les jeux de sociétés.<br>
+                    J'adore les jeux vidéos, mais aussi la lecture, le tir à l'arc et les jeux de sociétés.<br>
                     j'ai fait un séjour de 6 mois en Irelande pour ameliorer mon anglais, j'ai donc un bon niveau dans cette langue.
                 </span>
             </div>
