changed targer to target

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <h3>Portfolio</h3>
             <div class = "folioContainer">
                 <div class = "folioItem" id = "Aegis">
-                    <a href="https://github.com/Kadah-Ne/AegisBot" targer = "_blank">
+                    <a href="https://github.com/Kadah-Ne/AegisBot" target = "_blank">
                         <img src="Images/Aegis.png" alt="">
                     </a>
                 </div>
