--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="StyleSheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>CV Martin Gouviaux</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <a href="Downloadables/CV_Martin_Gouviaux.pdf" target="_blank" onclick="closeNav()">Télécharger mon CV</a>
     </div>
     <div class="Header">
-        <div class="TopBar">
+        <div id="StickyBar">
             <div class="TopBarName">
                 <a href="#">
                     Martin Gouviaux
@@ -33,12 +33,12 @@
             </div>
         </div>
         <div class="HeaderText">
-            <img src="Images/maFace.jpg" alt="">
+            <img src="Images/maFace.jpg" alt="" id="maFace">
             <h1>Martin Gouviaux</h1>
             <h2>2ème année de bachelor a l'EPSI de Grenoble</h2>
             <h2>Recherche d'Alternance 2022-2023</h2>
         </div>
-        <div class="HeaderLinks">
+        <div id="HeaderLinks">
             <a href="https://github.com/Kadah-Ne" target="_blank"><img src="Images/GitHub.png" alt=""></a>
             <a href="https://www.linkedin.com/in/martin-gouviaux-1b95681b7/" target="_blank"><img src="Images/Linkedin.png" alt=""></a>
         </div>
@@ -286,7 +286,7 @@
         </div>
     </div>
     <div id="FooterCV">
-        <div class="HeaderLinks">
+        <div id="HeaderLinks">
             <a href="https://github.com/Kadah-Ne" target="_blank"><img src="Images/GitHub.png" alt=""></a>
             <a href="https://www.linkedin.com/in/martin-gouviaux-1b95681b7/" target="_blank"><img src="Images/Linkedin.png" alt=""></a>
         </div>
