Changed color palet and made it more responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="Header">
         <div id="StickyBar">
-            <div class="TopBarName">
+            <div id="StickyName">
                 <a href="#">
                     Martin Gouviaux
                 </a>
