--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class = "Duration">Mai 2022 - Juillet 2022</div>
                         <div class = "WorkPlace">Schneider Electric</div>
                         <div class="logo">
-                            <img src="images/Logos/Schneider" alt="">
+                            <img src="images/Logos/Schneider.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -175,7 +175,7 @@
                         <div class = "Duration">Janvier 2022 - Fevrier 2022</div>
                         <div class = "WorkPlace">LSI Tech.</div>
                         <div class="logo">
-                            <img src="images/Logos/Schneider" alt="">
+                            <img src="images/Logos/LSI.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -188,7 +188,7 @@
                         <div class = "Duration">Septembre 2021 - Mai 2022</div>
                         <div class = "WorkPlace">Super U</div>
                         <div class="logo">
-                            <img src="images/Logos/Schneider" alt="">
+                            <img src="images/Logos/SuperU.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -201,7 +201,7 @@
                         <div class = "Duration">Avril 2021 - Juin 2021</div>
                         <div class = "WorkPlace">ARaymond</div>
                         <div class="logo">
-                            <img src="images/Logos/Schneider" alt="">
+                            <img src="images/Logos/Araymond.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
