--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class = "Duration">Mai 2022 - Juillet 2022</div>
                         <div class = "WorkPlace">Schneider Electric</div>
                         <div class="logo">
-                            <img src="./images/Logos/Schneider.png" alt="">
+                            <img src="./Images/Logos/Schneider.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -175,7 +175,7 @@
                         <div class = "Duration">Janvier 2022 - Fevrier 2022</div>
                         <div class = "WorkPlace">LSI Tech.</div>
                         <div class="logo">
-                            <img src="./images/Logos/LSI.png" alt="">
+                            <img src="./Images/Logos/LSI.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -188,7 +188,7 @@
                         <div class = "Duration">Septembre 2021 - Mai 2022</div>
                         <div class = "WorkPlace">Super U</div>
                         <div class="logo">
-                            <img src="./images/Logos/SuperU.png" alt="">
+                            <img src="./Images/Logos/SuperU.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -201,7 +201,7 @@
                         <div class = "Duration">Avril 2021 - Juin 2021</div>
                         <div class = "WorkPlace">ARaymond</div>
                         <div class="logo">
-                            <img src="./images/Logos/Araymond.png" alt="">
+                            <img src="./Images/Logos/Araymond.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -217,7 +217,7 @@
                         <div class = "Duration">Decembre 2019 - Mai 2020</div>
                         <div class = "WorkPlace">Reynolds Newsagent</div>
                         <div class="logo">
-                            <img src="./images/Logos/Schneider" alt="">
+                            <img src="./Images/Logos/Schneider" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -230,7 +230,7 @@
                         <div class = "Duration">Octobre 2019 - Mai 2020</div>
                         <div class = "WorkPlace">Debenhams</div>
                         <div class="logo">
-                            <img src="./images/Logos/Schneider" alt="">
+                            <img src="./Images/Logos/Schneider" alt="">
                         </div>
                     </div>
                     <div class = "RightPartWork">
@@ -257,7 +257,7 @@
                         <div class = "Duration">Septembre 2020 - Actuellement</div>
                         <div class = "School">EPSI Grenoble</div>
                         <div class="logo">
-                            <img src="./images/Logos/Schneider" alt="">
+                            <img src="./Images/Logos/Schneider" alt="">
                         </div>
                     </div>
                     <div class = "RightPartEd">
@@ -270,7 +270,7 @@
                         <div class = "Duration">Septembre 2017 - Juillet 2019</div>
                         <div class = "School">DLST - Université Grenoble Alpes</div>
                         <div class="logo">
-                            <img src="./images/Logos/Schneider" alt="">
+                            <img src="./Images/Logos/Schneider" alt="">
                         </div>
                     </div>
                     <div class = "RightPartEd">
@@ -283,7 +283,7 @@
                         <div class = "Duration">Septembre 2015 - Juillet 2017</div>
                         <div class = "School">Lycée Champollion Grenoble</div>
                         <div class="logo">
-                            <img src="./images/Logos/Schneider" alt="">
+                            <img src="./Images/Logos/Schneider" alt="">
                         </div>
                     </div>
                     <div class = "RightPartEd">
